syntax = "proto3";

package protobuf;

option go_package = "clcum/protobuf";

message LoginRequest {
    string student_id = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
}

// StudentService 서비스 정의
service StudentService {
    rpc Login (LoginRequest) returns (LoginResponse);
}